--- a/z-sol/tests/Cargo.toml
+++ b/z-sol/tests/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 
 [dependencies]
 anchor-client = "0.30.1"
+anchor-lang = "0.30.1"
 z-sol = { version = "0.1.0", path = "../programs/z-sol" }
